# autowds-instance

./: Cargo.toml
js/: index.js  package-lock.json  package.json
src/: chrome.rs  chromiumoxide.rs  main.rs
